--- a/deploy_app/tasks/main.yml
+++ b/deploy_app/tasks/main.yml
@@ -1,2 +1,30 @@
 ---
 # tasks file for deploy_app
+---
+- name: Ensure web root exists
+  file:
+    path: /var/www/html
+    state: directory
+    owner: www-data
+    group: www-data
+    mode: '0755'
+
+- name: Deploy artifact
+  when: artifact_path is defined and artifact_path != ''
+  unarchive:
+    src: "{{ artifact_path }}"
+    dest: /var/www/html
+    remote_src: false
+  notify: Restart Apache
+
+- name: Fallback index.php
+  when: artifact_path is not defined or artifact_path == ''
+  copy:
+    src: files/index.php
+    dest: /var/www/html/index.php
+    owner: www-data
+    group: www-data
+    mode: '0644'
+  notify: Restart Apache
+
+...
