--- a/apache_php/tasks/main.yml
+++ b/apache_php/tasks/main.yml
@@ -1,2 +1,19 @@
 ---
 # tasks file for apache_php
+---
+- name: Install Apache and PHP
+  apt:
+    name:
+      - apache2
+      - php
+      - libapache2-mod-php
+      - php-mysql
+    state: present
+    update_cache: yes
+
+- name: Ensure Apache is started and enabled
+  service:
+    name: apache2
+    state: started
+    enabled: yes
+...
