--- a/deploy-app.yml
+++ b/deploy-app.yml
@@ -7,6 +7,6 @@
     mysql_app_password: "{{ mysql_app_password | default('app_pass') }}"
   roles:
     - apache_php
-    - mysql_config
+    - mysql
     - deploy_app
 ...
