--- a/deploy_app/tasks/main.yml
+++ b/deploy_app/tasks/main.yml
@@ -24,7 +24,7 @@
   when: artifact_path is defined and artifact_path != ''
   unarchive:
     src: "{{ artifact_path }}"
-    dest: /var/www/html
+    dest: /var/www/html/index.php
     remote_src: false
   notify: Restart Apache
 
