--- a/deploy_app/tasks/main.yml
+++ b/deploy_app/tasks/main.yml
@@ -1,3 +1,47 @@
+# ---
+# # tasks file for deploy_app
+# - name: Ensure archive tools are present
+#   apt:
+#     name:
+#       - unzip
+#       - bzip2
+#       - xz-utils
+#       - zstd
+#       - zip
+#     state: present
+#     update_cache: yes
+#   become: yes
+
+# - name: Ensure web root exists
+#   file:
+#     path: /var/www/html
+#     state: directory
+#     owner: www-data
+#     group: www-data
+#     mode: '0755'
+
+# - name: Deploy artifact
+#   when: artifact_path is defined and artifact_path != ''
+#   unarchive:
+#     src: "{{ artifact_path }}"
+#     dest: /var/www/html/
+#     remote_src: false
+#   notify: Restart Apache
+
+# - name: Fallback index.php
+#   when: artifact_path is not defined or artifact_path == ''
+#   copy:
+#     src: files/index.php
+#     dest: /var/www/html/index.php
+#     owner: www-data
+#     group: www-data
+#     mode: '0644'
+#   notify: Restart Apache
+
+# ...
+
+
+
 ---
 # tasks file for deploy_app
 - name: Ensure archive tools are present
@@ -20,6 +64,58 @@
     group: www-data
     mode: '0755'
 
+- name: Copy artifact to remote /tmp
+  copy:
+    src: "{{ artifact_path }}"         # path: artifacts/phpapp-1.0.0.zip
+    dest: "/tmp/phpapp-{{ artifact_version }}.zip"
+    mode: '0644'
+  become: yes
+
+- name: Create temporary extract dir
+  file:
+    path: /tmp/phpapp_extract
+    state: directory
+    mode: '0755'
+  become: yes
+
+- name: Unzip artifact into temporary dir
+  unarchive:
+    src: "/tmp/phpapp-{{ artifact_version }}.zip"
+    dest: /tmp/phpapp_extract
+    remote_src: yes
+  become: yes
+
+- name: Move extracted contents into webroot (strip top-level dir if present)
+  shell: |
+    set -e
+    # if there's a single directory inside tmp extract, move its contents; else move all contents
+    cd /tmp/phpapp_extract
+    entries=(*/)
+    if [ "${entries[0]}" != "" ] && [ $(ls -1 | wc -l) -eq 1 ] && [ -d "${entries[0]}" ]; then
+      mv "${entries[0]}"* /var/www/html/
+    else
+      mv * /var/www/html/
+    fi
+  args:
+    executable: /bin/bash
+  become: yes
+
+- name: Ensure ownership and permissions on webroot
+  file:
+    path: /var/www/html
+    recurse: yes
+    owner: www-data
+    group: www-data
+    mode: '0644'
+  become: yes
+
+- name: Remove temporary files
+  file:
+    path: /tmp/phpapp_extract
+    state: absent
+  become: yes
+
+
 - name: Deploy artifact
   when: artifact_path is defined and artifact_path != ''
   unarchive:
@@ -39,3 +135,59 @@
   notify: Restart Apache
 
 ...
+
+
+
+
+
+
+# - name: Copy artifact to remote /tmp
+#   copy:
+#     src: "{{ artifact_path }}"         # controller path: artifacts/phpapp-1.0.0.zip
+#     dest: "/tmp/phpapp-{{ artifact_version }}.zip"
+#     mode: '0644'
+#   become: yes
+
+# - name: Create temporary extract dir
+#   file:
+#     path: /tmp/phpapp_extract
+#     state: directory
+#     mode: '0755'
+#   become: yes
+
+# - name: Unzip artifact into temporary dir
+#   unarchive:
+#     src: "/tmp/phpapp-{{ artifact_version }}.zip"
+#     dest: /tmp/phpapp_extract
+#     remote_src: yes
+#   become: yes
+
+# - name: Move extracted contents into webroot (strip top-level dir if present)
+#   shell: |
+#     set -e
+#     # if there's a single directory inside tmp extract, move its contents; else move all contents
+#     cd /tmp/phpapp_extract
+#     entries=(*/)
+#     if [ "${entries[0]}" != "" ] && [ $(ls -1 | wc -l) -eq 1 ] && [ -d "${entries[0]}" ]; then
+#       mv "${entries[0]}"* /var/www/html/
+#     else
+#       mv * /var/www/html/
+#     fi
+#   args:
+#     executable: /bin/bash
+#   become: yes
+
+# - name: Ensure ownership and permissions on webroot
+#   file:
+#     path: /var/www/html
+#     recurse: yes
+#     owner: www-data
+#     group: www-data
+#     mode: '0644'
+#   become: yes
+
+# - name: Remove temporary files
+#   file:
+#     path: /tmp/phpapp_extract
+#     state: absent
+#   become: yes
