--- a/deploy_app/tasks/main.yml
+++ b/deploy_app/tasks/main.yml
@@ -25,7 +25,7 @@
   unarchive:
     src: "{{ artifact_path }}"
     dest: /var/www/html/
-    remote_src: false
+    remote_src: true
   notify: Restart Apache
 
 - name: Fallback index.php
