--- a/deploy-app.yml
+++ b/deploy-app.yml
@@ -1,12 +1,31 @@
 ---
+# - name: Deploy PHP_Crud app
+#   hosts: "{{ target_group | default('staging') }}"
+#   become: true
+#   vars:
+#     artifact_path: "{{ artifact_path | default('') }}"
+#     mysql_app_password: "{{ mysql_app_password | default('app_pass') }}"
+#   roles:
+#     - apache_php
+#     - mysql
+#     - deploy_app
+
+
+
+
 - name: Deploy PHP_Crud app
-  hosts: "{{ target_group | default('staging') }}"
-  become: true
+  hosts: "{{ target_env | default('staging') }}"
+  become: yes
   vars:
-    artifact_path: "{{ artifact_path | default('') }}"
+    web_root: /var/www/html
+    tmp_zip: "/tmp/phpapp-{{ artifact_version }}.zip"
+    tmp_extract: "/tmp/phpapp_extract_{{ artifact_version }}"
     mysql_app_password: "{{ mysql_app_password | default('app_pass') }}"
   roles:
     - apache_php
     - mysql
     - deploy_app
+
+
+
 ...
