--- a/deploy-app.yml
+++ b/deploy-app.yml
@@ -1,30 +1,30 @@
 ---
-# - name: Deploy PHP_Crud app
-#   hosts: "{{ target_group | default('staging') }}"
-#   become: true
-#   vars:
-#     artifact_path: "{{ artifact_path | default('') }}"
-#     mysql_app_password: "{{ mysql_app_password | default('app_pass') }}"
-#   roles:
-#     - apache_php
-#     - mysql
-#     - deploy_app
-
-
-
-
 - name: Deploy PHP_Crud app
-  hosts: "{{ target_env | default('staging') }}"
-  become: yes
+  hosts: "{{ target_group | default('staging') }}"
+  become: true
   vars:
-    web_root: /var/www/html
-    tmp_zip: "/tmp/phpapp-{{ artifact_version }}.zip"
-    tmp_extract: "/tmp/phpapp_extract_{{ artifact_version }}"
+    artifact_path: "{{ artifact_path | default('') }}"
     mysql_app_password: "{{ mysql_app_password | default('app_pass') }}"
   roles:
     - apache_php
     - mysql
     - deploy_app
+
+
+
+
+# - name: Deploy PHP_Crud app
+#   hosts: "{{ target_env | default('staging') }}"
+#   become: yes
+#   vars:
+#     web_root: /var/www/html
+#     tmp_zip: "/tmp/phpapp-{{ artifact_version }}.zip"
+#     tmp_extract: "/tmp/phpapp_extract_{{ artifact_version }}"
+#     mysql_app_password: "{{ mysql_app_password | default('app_pass') }}"
+#   roles:
+#     - apache_php
+#     - mysql
+#     - deploy_app
 
 
 
