--- a/deploy-app.yml
+++ b/deploy-app.yml
@@ -18,8 +18,8 @@
   become: true
   vars:
     web_root: /var/www/html
-    tmp_zip: "/tmp/phpapp-{{ artifact_version }}.zip"
-    tmp_extract: "/tmp/phpapp_extract_{{ artifact_version }}"
+    tmp_zip: "/tmp/php-crud-app-{{ artifact_version }}.zip"
+    tmp_extract: "/tmp/php-crud-app_extract_{{ artifact_version }}"
 
   roles:
     - apache_php
