--- a/deploy_app/tasks/main.yml
+++ b/deploy_app/tasks/main.yml
@@ -48,7 +48,10 @@
   apt:
     name:
       - unzip
+      - bzip2
+      - xz-utils
       - zip
+      - zstd
       - php
       - libapache2-mod-php
     state: present
