--- a/deploy-app.yml
+++ b/deploy-app.yml
@@ -1,30 +1,30 @@
 ---
-# - name: Deploy PHP_Crud app
-#   hosts: "{{ target_group | default('staging') }}"
-#   become: true
-#   vars:
-#     artifact_path: "{{ artifact_path | default('') }}"
-#     mysql_app_password: "{{ mysql_app_password | default('app_pass') }}"
-#   roles:
-#     - apache_php
-#     - mysql
-#     - deploy_app
-
-
-
-
 - name: Deploy PHP_Crud app
   hosts: "{{ target_group | default('staging') }}"
   become: true
   vars:
-    web_root: /var/www/html
-    tmp_zip: "/tmp/php-crud-app-{{ artifact_version }}.zip"
-    tmp_extract: "/tmp/php-crud-app_extract_{{ artifact_version }}"
-
+    #artifact_path: "{{ artifact_path | default('') }}"
+    mysql_app_password: "{{ mysql_app_password | default('app_pass') }}"
   roles:
     - apache_php
     - mysql
     - deploy_app
+
+
+
+
+# - name: Deploy PHP_Crud app
+#   hosts: "{{ target_group | default('staging') }}"
+#   become: true
+#   vars:
+#     web_root: /var/www/html
+#     tmp_zip: "/tmp/php-crud-app-{{ artifact_version }}.zip"
+#     tmp_extract: "/tmp/php-crud-app_extract_{{ artifact_version }}"
+
+#   roles:
+#     - apache_php
+#     - mysql
+#     - deploy_app
 
 
 
