--- a/deploy_app/tasks/main.yml
+++ b/deploy_app/tasks/main.yml
@@ -75,7 +75,7 @@
   #when: artifact_path is defined and artifact_path != ''
   unarchive:
     src: "/tmp/php-crud-app-{{ artifact_version }}.zip"
-    dest: /var/www/html/index.php
+    dest: /var/www/html/
     remote_src: yes
   notify: Restart Apache
 
