--- a/deploy_app/tasks/main.yml
+++ b/deploy_app/tasks/main.yml
@@ -79,10 +79,10 @@
     remote_src: yes
   notify: Restart Apache
 
-- name: Remove default index.html if present
-  file:
-    path: "/var/www/html/index.html"
-    state: absent
+# - name: Remove default index.html if present
+#   file:
+#     path: "/var/www/html/index.html"
+#     state: absent
 
 - name: Restart Apache
   service:
